--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
     "javascript-obfuscator": "^4.1.1",
-    "rollup-plugin-obfuscator": "^1.1.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-javascript-obfuscator": "^3.1.0",
+    "vite-plugin-obfuscator": "^1.0.5"
   }
 }
