--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,29 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
 
+# Vite build output
+/dist
+
+# Vite cache
+/.vite
+
 # testing
 /coverage
-
-# production
-/build
 
 # misc
 .DS_Store
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+
+# IDE/editor configs
+.idea/
+.vscode/
+Thumbs.db
