--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primereact": "^10.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
