--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "depcheck": "^1.4.7",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
