--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "axios": "^1.11.0",
     "depcheck": "^1.4.7",
     "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
